Removed modules and streamlined build (#16)
Co-authored-by: Charlie <charlie@charlie.fr>